--- a/stories/datePicker.stories.mdx
+++ b/stories/datePicker.stories.mdx
@@ -5,7 +5,7 @@ import License from './datePickerParams.mdx';
 
 
 
-<Meta title="Date Picker" component={datePicker} />
+<Meta title="Date Picker" component={datePicker}   parameters={{ docs: { disable: true }}}/>
 
 <License />
 
