--- a/stories/datePicker.stories.mdx
+++ b/stories/datePicker.stories.mdx
@@ -5,17 +5,13 @@ import License from './datePickerParams.mdx';
 
 
 
-<Meta title="Date Picker" component={datePicker}   parameters={{ docs: { disable: true }}}/>
-
-<License />
+<Meta title="Date Picker" component={datePicker}/>
 
 
+<License 
+  />
 
 <Story name="Parameters">
-  <Button
-    size="large"
-    username="Tom Coleman"
-    src="https://avatars2.githubusercontent.com/u/132554"
-  />
+  
 </Story>
 
