--- a/stories/datePickerEvents.stories.mdx
+++ b/stories/datePickerEvents.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks';
 import { datePicker } from '@storybook/react/demo';
-import Date from './datePickerParams.mdx';
+import Events from './datePickerEvents.mdx';
 
 
 
@@ -8,10 +8,10 @@ import Date from './datePickerParams.mdx';
 <Meta title="Date Picker" component={datePicker}/>
 
 
-<Date 
+<Events
   />
 
-<Story name="Parameters">
+<Story name="Events">
   
 </Story>
 
