--- a/stories/datePickerMethods.stories.mdx
+++ b/stories/datePickerMethods.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks';
 import { datePicker } from '@storybook/react/demo';
-import Date from './datePickerParams.mdx';
+import Methods from './datePickerMethods.mdx';
 
 
 
@@ -8,10 +8,10 @@ import Date from './datePickerParams.mdx';
 <Meta title="Date Picker" component={datePicker}/>
 
 
-<Date 
+<Methods 
   />
 
-<Story name="Parameters">
+<Story name="Methods">
   
 </Story>
 
