--- a/stories/datePickerKeyboard.stories.mdx
+++ b/stories/datePickerKeyboard.stories.mdx
@@ -11,7 +11,7 @@ import Keyboard from './datePickerKeyboard.mdx';
 <Keyboard
   />
 
-<Story name="Keyboard And Support">
+<Story name="Keyboard Support">
   
 </Story>
 
