--- a/stories/datePickerKeyboard.mdx
+++ b/stories/datePickerKeyboard.mdx
@@ -1,8 +1,7 @@
-- By default, datepicker should support keyboard navigation.<br/>
-- Keys left/right will move focus backward/forward one day, up/down will move focus back/forward one week.<br/>
+- Datepicker supports keyboard navigation.<br/>
+- Keys left/right move focus backward/forward one day, up/down move focus back/forward one week.<br/>
 - With the shift key, up/left will move focus backward one month, down/right will move focus forward one month.<br/>
 - With the ctrl key, up/left will move focus backward one year, down/right will move focus forward one year.<br/>
     **Note:** In Mac we need to use Command + <br/>
 
-
-- Enter should select focused date and Escape should hide displayed date picker.
+- Enter selects focused date and Escape hides displayed date picker
