--- a/stories/datePicker.stories.mdx
+++ b/stories/datePicker.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks';
 import { datePicker } from '@storybook/react/demo';
-import Date from './datePickerParams.mdx';
+import License from './datePickerParams.mdx';
 
 
 
@@ -8,7 +8,7 @@ import Date from './datePickerParams.mdx';
 <Meta title="Date Picker" component={datePicker}/>
 
 
-<Date 
+<License 
   />
 
 <Story name="Parameters">
