--- a/stories/datePickerEvents.stories.mdx
+++ b/stories/datePickerEvents.stories.mdx
@@ -8,9 +8,9 @@ import Events from './datePickerEvents.mdx';
 <Meta title="Date Picker" component={datePicker}/>
 
 
+ <Events /> 
 
 <Story name="Events">
-  <Events
-  />
+ 
 </Story>
 
