--- a/stories/datePickerParams.mdx
+++ b/stories/datePickerParams.mdx
@@ -1,10 +1,10 @@
 
  
 |Sr. No.|Names|Purpose|Possible Values|Mandatory|
-|--- |--- |--- |--- |
+|--- |--- |--- |--- |--- |
 |1|dateStringAlignment|Allows alignment of date either to left or right|Left, Right <br/><br/> Default: Left|No|
 |2|dateButtonPrimary|This shows primary buttons if showButtons parameter is enabled|Default: OK|No|
-|3|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, ,DD/MM/YYYY, M (&Y)Q (&Y) and Y <br/><br/> Default: DD/MM/YYYY|No|
+|3|displayFormat|Format in which the date input should be accepted. This will depend upon the setting of “Display Unit”|MM/DD/YYYY, ,DD/MM/YYYY, M (&Y)Q (&Y) and Y <br/><br/> Default: MM/DD/YYYY|No|
 |4|disabledList|List of disabled dates|Can have n number of disabled dates.<br/><br/>For Example:  ["11/25/2000", "11/29/2000", "11/13/2019", "11/14/2019", "11/2011", "12/2011", "Q2/2011", "Q3/2011","2007", "2008"]|No|
 |5|iconAlignment|The calendar icon’s display location.|Left, Right <br/><br/>Default: Left|No|
 |6|indicatorList|List of dates that need to have an indicator against them in display. Each indicator list will have a specific color and a list of dates associated with them|Can be n number of indicator.<br/><br/>For example: [{ "dates": ["01/10/2019","02/11/2019"], "color": "#333" }, { "dates": ["02/09/2019","01/08/2019"], "color": "#ff0000" }]|No|
