--- a/stories/datePickerKeyboard.mdx
+++ b/stories/datePickerKeyboard.mdx
@@ -1,7 +1,10 @@
-- Datepicker supports keyboard navigation.<br/>
-- Keys left/right move focus backward/forward one day, up/down move focus back/forward one week.<br/>
-- With the shift key, up/left will move focus backward one month, down/right will move focus forward one month.<br/>
+- Datepicker supports keyboard navigation.
+
+- Keys left/right move focus backward/forward one day, up/down move focus back/forward one week.
+
+- With the shift key, up/left will move focus backward one month, down/right will move focus forward one month.
+
 - With the ctrl key, up/left will move focus backward one year, down/right will move focus forward one year.<br/>
-    **Note:** In Mac we need to use Command + <br/>
+ **Note:** In Mac we need to use Command +
 
 - Enter selects focused date and Escape hides displayed date picker
