--- a/stories/tagSelectorStories/tagSelectorEvents.mdx
+++ b/stories/tagSelectorStories/tagSelectorEvents.mdx
@@ -2,11 +2,10 @@
  
 |Sr. No.|Events|Comments|Examples|
 |--- |--- |--- |--- |
-|1|blur| Script to be run when an element loses focus|&lt;script&gt;<br/>function onBlurHandler(){<br/>alert(' onBlurHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onBlur="onBlurHandler\(\)"&gt;|
-|2|focus|Script to be run when an element gets focus|&lt;script&gt;<br/>function onFocusHandler(){<br/>alert(' onFocusHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onFocus="onFocusHandler\(\)"&gt;|
-|3|select|Script to be run when user selects a value|&lt;script&gt;<br/>function onSelectHandler(){<br/>alert(' onSelectHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onSelect="onSelectHandler\(\)"&gt;|
-|4|input|Script to be run when an element gets user input|&lt;script&gt;<br/>function onInputHandler(){<br/>alert(' onInputHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onInput="onInputHandler\(\)"&gt;|
-|5|change|Script to be run when change has occurred to the control|&lt;script&gt;<br/>function onChangeHandler(){<br/>alert(' onChangeHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onChange="onChangeHandler\(\)"&gt;|
-|6|keyup|script to be run when user releases a key|&lt;script&gt;<br/>function onKeyupHandler(){<br/>alert(' onKeyupHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onKeyUp="onKeyupHandler\(\)"&gt;|
-|7|keydown|script to be run when user presses a key|&lt;script&gt;<br/>function onKeydownHandler(){<br/>alert(' onKeydownHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onFocus="onKeydownHandler\(\)"&gt;|
+|1|blur| Script to be run when an element loses focus|&lt;script&gt;<br/>function onBlurHandler(){<br/>alert(' onBlurHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onBlur="onBlurHandler\(\)"&gt;|
+|2|focus|Script to be run when an element gets focus|&lt;script&gt;<br/>function onFocusHandler(){<br/>alert(' onFocusHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onFocus="onFocusHandler\(\)"&gt;|
+|3|input|Script to be run when an element gets user input|&lt;script&gt;<br/>function onInputHandler(){<br/>alert(' onInputHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onInput="onInputHandler\(\)"&gt;|
+|4|change|Script to be run when change has occurred to the control|&lt;script&gt;<br/>function onChangeHandler(){<br/>alert(' onChangeHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onChange="onChangeHandler\(\)"&gt;|
+|5|keyup|script to be run when user releases a key|&lt;script&gt;<br/>function onKeyupHandler(){<br/>alert(' onKeyupHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onKeyUp="onKeyupHandler\(\)"&gt;|
+|6|keydown|script to be run when user presses a key|&lt;script&gt;<br/>function onKeydownHandler(){<br/>alert(' onKeydownHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;tag-selector onFocus="onKeydownHandler\(\)"&gt;|
 
