--- a/stories/componentStories/gridStories/inCell.stories.mdx
+++ b/stories/componentStories/gridStories/inCell.stories.mdx
@@ -1,13 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/rowStyling.png';
+import imgUrl from '../../assets/inCell.png';
 import '../../style.css';
 
 
 
-<Meta title="Grid/Row Level Configurations/Customised Row Styling" component={grid} />
+<Meta title="Grid/Edit Options/In cell editing of all cells" component={grid} />
 
- 
 <img src={imgUrl} className="grid-img"/>
 
 
