--- a/stories/componentStories/gridStories/disableCell.stories.mdx
+++ b/stories/componentStories/gridStories/disableCell.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Edit Options/Disable cell editing" component={grid} />
 
+###### data-options = '{"otherGridOptions":{"rowInEditMode": true}, showColumns: [{"field": "UnitsInStock","title": "Units In Stock","editable": false,"filter": "numeric",}]}'
 <img src={imgUrl} className="grid-img"/>
 
 
