--- a/stories/componentStories/gridStories/editCell.stories.mdx
+++ b/stories/componentStories/gridStories/editCell.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Edit Options/Edit in cell" component={grid} />
 
+###### data-options = '{"otherGridOptions": {"rowInEditMode": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
