--- a/stories/componentStories/gridStories/extForm.stories.mdx
+++ b/stories/componentStories/gridStories/extForm.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Edit Options/External Form" component={grid} />
 
+###### data-options = '{"otherGridOptions":{"externalEditMode": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
