--- a/stories/componentStories/gridStories/stickyHeader.stories.mdx
+++ b/stories/componentStories/gridStories/stickyHeader.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Sticky Header" component={grid} />
 
+###### No data-options. Default behaviour.
 <img src={imgUrl} className="grid-img"/>
 
 
