--- a/stories/componentStories/gridStories/cellLevelTool.stories.mdx
+++ b/stories/componentStories/gridStories/cellLevelTool.stories.mdx
@@ -7,6 +7,8 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Cell Level Tooltip" component={grid} />
 
+###### data-options = '&#123; "otherGridOptions": &#123;"cellToolTip": true&#125; &#125';
+
 <img src={imgUrl} className="grid-img"/>
 
 
