--- a/stories/componentStories/gridStories/filterMenu.stories.mdx
+++ b/stories/componentStories/gridStories/filterMenu.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Filter Option/Filter as menu option" component={grid} />
 
+###### data-options = '{"filterOptions": {"filterable": true, "filterMode": "menu"}}'
 <img src={imgUrl} className="grid-img"/>
 
 
