--- a/stories/componentStories/gridStories/inCell.stories.mdx
+++ b/stories/componentStories/gridStories/inCell.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Edit Options/In cell editing of all cells" component={grid} />
 
+###### data-options = '{"otherGridOptions":{"allEditable": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
