--- a/stories/componentStories/gridStories/rowStyling.stories.mdx
+++ b/stories/componentStories/gridStories/rowStyling.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Row Level Configurations/Customised Row Styling" component={grid} />
 
- 
+ ###### data-options = '{"style": {"customizedRow": {"field":"fieldName","value":"22","operator":"<","style": {"backgroundColor": "rgb(55, 180, 0,0.32)"}}}}'
 <img src={imgUrl} className="grid-img"/>
 
 
