--- a/stories/componentStories/gridStories/addRow.stories.mdx
+++ b/stories/componentStories/gridStories/addRow.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Edit Options/Add row" component={grid} />
 
-###### data-options = '{"otherGridOptions": {"allowNewRow": true}}'
+ data-options = '{"otherGridOptions": {"allowNewRow": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
