--- a/stories/componentStories/gridStories/cellWithUi.stories.mdx
+++ b/stories/componentStories/gridStories/cellWithUi.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Cells with any UI Component" component={grid} />
 
- ###### No data-options required. If a column in JSON has HTML content it will be rendered as HTML.
+ No data-options required. If a column in JSON has HTML content it will be rendered as HTML.
 <img src={imgUrl} className="grid-img"/>
 
 
