--- a/stories/componentStories/gridStories/exportOptions.stories.mdx
+++ b/stories/componentStories/gridStories/exportOptions.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Export Options" component={grid} />
 
- ###### data-options = '&#123; "exportOptions": &#123; "toExcel": true, "toPDF": true, "allPages": true &#125; &#125;'
+ data-options = '&#123; "exportOptions": &#123; "toExcel": true, "toPDF": true, "allPages": true &#125; &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
