--- a/stories/componentStories/gridStories/filterSingle.stories.mdx
+++ b/stories/componentStories/gridStories/filterSingle.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Filter Option/Filter options with single value" component={grid} />
 
-###### data-options = '{"filterOptions": {"filterable": true, "filterMode": "menu", isMultiValueFilter: false}}'
+ data-options = '{"filterOptions": {"filterable": true, "filterMode": "menu", isMultiValueFilter: false}}'
 <img src={imgUrl} className="grid-img"/>
 
 
