--- a/stories/componentStories/gridStories/infiniteScroll.stories.mdx
+++ b/stories/componentStories/gridStories/infiniteScroll.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Infinite Scroll Mode" component={grid} />
 
- ###### No data-options required. If no value specified for any of pageable fields.
+ No data-options required. If no value specified for any of pageable fields.
 <img src={imgUrl} className="grid-img"/>
 
 
