--- a/stories/componentStories/gridStories/multiColHeaders.stories.mdx
+++ b/stories/componentStories/gridStories/multiColHeaders.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Column Level Configuration/Multi column headers" component={grid} />
 
-###### data-options = '{"showColumns":[{"field": "ProductID", "title": "ProductID","filter": "numeric","parentName": "prodinfo","locked": true},{"name": "prodinfo","title": "Production Info","isParent": true }, {"field": "Discontinued","title": "Discontinued","filter": "boolean","parentName": "prodinfo","width": "100px" }]"}'
+ data-options = '{"showColumns":[{"field": "ProductID", "title": "ProductID","filter": "numeric","parentName": "prodinfo","locked": true},{"name": "prodinfo","title": "Production Info","isParent": true }, {"field": "Discontinued","title": "Discontinued","filter": "boolean","parentName": "prodinfo","width": "100px" }]"}'
 <img src={imgUrl} className="grid-img"/>
 
 
