--- a/stories/componentStories/gridStories/reorderRow.stories.mdx
+++ b/stories/componentStories/gridStories/reorderRow.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Row Level Configurations/Reorder Row" component={grid} />
 
-###### data-options = '{"rows": {"reorder": true}'
+ data-options = '{"rows": {"reorder": true}'
 <img src={imgUrl} className="grid-img"/>
 
 
