--- a/stories/componentStories/gridStories/resizableColumns.stories.mdx
+++ b/stories/componentStories/gridStories/resizableColumns.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Column Level Configuration/Resizable Columns" component={grid} />
 
+data-options = '{"otherGridOptions": {"resizable": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
