--- a/stories/componentStories/gridStories/rowSelected.stories.mdx
+++ b/stories/componentStories/gridStories/rowSelected.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Row Level Configurations/Row Selected" component={grid} />
 
- ###### data-options = '&#123; "selectedRowPrimaryKey": Value &#125;'
+ data-options = '&#123; "selectedRowPrimaryKey": Value &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
