--- a/stories/componentStories/gridStories/showHideCols.stories.mdx
+++ b/stories/componentStories/gridStories/showHideCols.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/show Or Hide Columns" component={grid} />
 
- ######  data-options ='&#123; "filterOptions": &#123;"filterable": false, "filterMode": "menu"&#125; &#125;'
+ data-options ='&#123; "filterOptions": &#123;"filterable": false, "filterMode": "menu"&#125; &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
