--- a/stories/componentStories/gridStories/aggregateRow.stories.mdx
+++ b/stories/componentStories/gridStories/aggregateRow.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Aggregate Row" component={grid} />
 
- ###### data-options = '{"aggregates": [{"field": "AmortizedCost","style": {"color": "#55ff90"}},{"field": "Allowance"},{"field": "Adjustment"}]}'
+ data-options =  '{"aggregates": [{"field": "AmortizedCost"},{"field": "Allowance"},{"field": "Adjustment"}]}'
 <img src={imgUrl} className="grid-img"/>
 
 
