--- a/stories/componentStories/gridStories/clearFilter.stories.mdx
+++ b/stories/componentStories/gridStories/clearFilter.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Filter Option/Clear filter" component={grid} />
 
-###### No data options
+ No data options
 <img src={imgUrl} className="grid-img"/>
 
 
