--- a/stories/componentStories/gridStories/gridParams.mdx
+++ b/stories/componentStories/gridStories/gridParams.mdx
@@ -10,3 +10,4 @@
 |8|pageable||pageable.buttonCount—Sets the maximum numeric buttons count before the buttons are collapsed.<br/>Default: Total no. of rows%count per page + 1<br/><br/>pageable.info—Toggles the information about the current page and the total number of records.<br/>Default: True<br/><br/>pageable.type—Accepts the numeric (buttons with numbers) and input (input for typing the page number) values.<br/>Default: numeric<br/><br/>pageable.pageSizes—Shows a menu for selecting the page size.<br/>Default: False<br/><br/>pageable.previousNext—Toggles the Previous and Next buttons.<br/>Default: True<br/><br/>Default value for pageable: null|
 |9|style|Set style to the grid|style.stripedPattern: true => set striped patterns for grid rows<br/><br/>style.height: 300px|
 |10|advanced||advanced.masterDetail should be set to a column name which has array of object data.<br/> For example: order_details.<br/>Default: None<br/><br/>advanced.detailRows <br/>{<br/>"type": "column",<br/>"columns": [{ <br/>"label": "labelValue",<br/>"field": ""fieldName"<br/>},<br/> {<br/>"label": "labelValue",<br/>"field": "fieldValue"<br/>}<br/>]}|
+|11|aggregates||By default aggregate cell will have red background unless specified in style.|
