--- a/stories/componentStories/gridStories/lockedColumns.stories.mdx
+++ b/stories/componentStories/gridStories/lockedColumns.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Column Level Configuration/Locked Columns" component={grid} />
 
+data-options = '{lockedColumns: ["Header1"]}'
 <img src={imgUrl} className="grid-img"/>
 
 
