--- a/stories/componentStories/gridStories/reorderCols.stories.mdx
+++ b/stories/componentStories/gridStories/reorderCols.stories.mdx
@@ -7,6 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Column Level Configuration/Reorder Columns" component={grid} />
 
+data-options = '{"otherGridOptions": {"reorderable": true}}'
 <img src={imgUrl} className="grid-img"/>
 
 
