--- a/stories/componentStories/gridStories/rowDetail.stories.mdx
+++ b/stories/componentStories/gridStories/rowDetail.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Row Level Configurations/Row Detailing on expanding" component={grid} />
 
- ###### data-options = '&#123;  "advanced": &#123;"detailRows":&#123;"type": "column","columns":[&#123;"label":"Status","field":"Status"&#125;,&#123;"label":"Occurance","field":"Occurance"&#125;&#123;"label":"Comments","field":"Comments"&#125;]&#125; &#125; &#125;'
+ data-options = '&#123;  "advanced": &#123;"detailRows":&#123;"type": "column","columns":[&#123;"label":"Status","field":"Status"&#125;,&#123;"label":"Occurance","field":"Occurance"&#125;&#123;"label":"Comments","field":"Comments"&#125;]&#125; &#125; &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
