--- a/stories/componentStories/gridStories/stripedPattern.stories.mdx
+++ b/stories/componentStories/gridStories/stripedPattern.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Striped Pattern" component={grid} />
 
- ###### data-options = '&#123; "style": &#123; "stripedPattern":true &#125; &#125;'
+data-options = '&#123; "style": &#123; "stripedPattern":true &#125; &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
