--- a/stories/componentStories/gridStories/sortColumn.stories.mdx
+++ b/stories/componentStories/gridStories/sortColumn.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Sort Column" component={grid} />
 
-data-options = '&#123; "sortable": &#123; "allowed": true,"mode":"single","allowUnsort":true &#125;  &#125;'
+data-options = '&#123; "sortable": &#123; "allowed": true,"mode":"single","allowUnsort":false &#125;  &#125;'
 <img src={imgUrl} className="grid-img"/>
 
 
