--- a/stories/componentStories/gridStories/gridParams.mdx
+++ b/stories/componentStories/gridStories/gridParams.mdx
@@ -1,14 +1,23 @@
 |Sr. No.   |  Name | Purpose   | Possible Values  |
 |---|---|---|---|
 |1|globalSearch|Search elements across the grid|Show global search option. true, false<br/><br/>Default: False|
-|2|otherGridOptions||otherGridOptions.groupable= true => allow group columns,<br/>Default: False<br/><br/>otherGridOptions.expandField = true => grouped columns in expanded form,<br/>Default: True<br/><br/>dataState.group: [{""field"": ""fieldName""}] => array of field names<br/>Default: []<br/><br/>otherGridOptions.resizable = true => resize columns<br/>Default:False<br/><br/>otherGridOptions.reorderable = true => reorder columns<br/>Default:False<br/><br/>"otherGridOptions":"rowInEditMode": true<br/>Default: False<br/><br/>"otherGridOptions":"rowInEditMode": true<br/><br/>
-editable: true"|
-|3|sortable|Allow sort/unsort for the grid|sortable.allowed: true => allow sorting,<br/>Default:False<br/><br/>sortable.mode:single/multiple => applicable only when sortable.allowed = true. single = sorting allowed only on single column. multiple = sorting allowed on multiple columns.<br/>Default: single<br/><br/>allowUnsort:false => applicable only when sortable.allowed = true. false = Unsorting of column is disallowed or allowed.<br/>Default: True|
-|4|filterOptions||filterOptions.filterMode=menu or row<br/>menu: Filter is displayed as part of a menu on column headers.<br/>row: Filter is dispalyed as a row.<br/><br/>Default: menu<br/><br/>and filterOptions.filterable=false<br/>Default: False<br/><br/>filterOptions.isMultiValueFilter<br/><br/>Default: False|
+|2|otherGridOptions|Provied grid operations to make changes like resize, reorder,groupetc.|otherGridOptions.groupable: Set this to true to allow grouping of data by one or more selected columns. User can drag and drop a column header in a designated space to group data by column(s).<br/>Allowed: true, false<br/>Default: false<br/><br/>otherGridOptions.expandField: Set this to true to display grouped columns in expanded form. Applicable only when otherGridOptions.groupable is true.<br/>Allowed: true, false<br/>Default: true<br/><br/>otherGridOptions.resizable: true => resize columns<br/>Default:False<br/><br/>otherGridOptions.reorderable: true => reorder columns<br/>Default:False<br/><br/>otherGridOptions.rowInEditMode: true<br/>Default: False<br/><br/>otherGridOptions.rowInEditMode: true<br/>editable: true|
+|3|sortable|Allow sort/unsort for the grid|sortable.allowed: true => allow sorting,<br/>Default:False<br/><br/>sortable.mode:single/multiple => applicable only when sortable.allowed = true. single = sorting allowed only on single column.<br/> multiple = sorting allowed on multiple columns.<br/>Default: single<br/><br/>allowUnsort:false => applicable only when sortable.allowed = true. false = Unsorting of column is disallowed or allowed.<br/>Default: True|
+|4|filterOptions|Provide values for filter options|filterOptions.filterMode=menu or row<br/>menu: Filter is displayed as part of a menu on column headers.<br/>row: Filter is dispalyed as a row.<br/>Default: menu<br/><br/>filterOptions.filterable=false<br/>Default: False<br/><br/>filterOptions.isMultiValueFilter<br/>Default: False|
 |5|exportOptions|Export all/selected data in the form of excel or pdf|exportOptions.toExcel => Show Export to Excel Button<br/>Default: <br/><br/>exportOptions.toPDF => Show Export to PDF Button<br/>Default: <br/><br/>exportOptions.allPages => Export all pages<br/>Default: false|
 |6|loadOnce||True/False<br/>If True, all data is loaded at once and pagination is handled by Grid in browser.<br/>If False, only first page data is loaded initially and pagination is handled at the backend. Need to specify parameter dataURL.<br/><br/>Default: False|
 |7|lockedColumns|Columns will be visible while the user scrolls the Grid horizantally|Array of field names<br/><br/>Default: none|
-|8|pageable||pageable.buttonCount—Sets the maximum numeric buttons count before the buttons are collapsed.<br/>Default: Total no. of rows%count per page + 1<br/><br/>pageable.info—Toggles the information about the current page and the total number of records.<br/>Default: True<br/><br/>pageable.type—Accepts the numeric (buttons with numbers) and input (input for typing the page number) values.<br/>Default: numeric<br/><br/>pageable.pageSizes—Shows a menu for selecting the page size.<br/>Default: False<br/><br/>pageable.previousNext—Toggles the Previous and Next buttons.<br/>Default: True<br/><br/>Default value for pageable: null|
-|9|style|Set style to the grid|"style.customizedRow: Customize background color of rows based on given field, field value and operator. For example: In the example on left, given background color will be applied to rows where fieldName.value < 22.<br/><br/>Default: None<br/><br/>style.customizedRow.field, style.customizedRow.value, style.customizedRow.operator, style.customizedRow.style<br/>Create condition for applying custom color to a row. style.customizedRow.style.backgroundColor will be applied to rows where (style.customizedRow.field.value style.customizedRow.operator style.customizedRow.value)<br/><br/>Default: None for all."|
-|10|advanced||advanced.masterDetail should be set to a column name which has array of object data.<br/> For example: order_details.<br/>Default: None<br/><br/>advanced.detailRows <br/>{<br/>"type": "column",<br/>"columns": [{ <br/>"label": "labelValue",<br/>"field": ""fieldName"<br/>},<br/> {<br/>"label": "labelValue",<br/>"field": "fieldValue"<br/>}<br/>]}|
-|11|aggregates||By default aggregate cell will have red background unless specified in style.|
+|8|pageable|Set values for pagination|pageable.buttonCount—Sets the maximum numeric buttons count before the buttons are collapsed.<br/>Default: Total no. of rows%count per page + 1<br/><br/>pageable.info—Toggles the information about the current page and the total number of records.<br/>Default: True<br/><br/>pageable.type—Accepts the numeric (buttons with numbers) and input (input for typing the page number) values.<br/>Default: numeric<br/><br/>pageable.pageSizes—Shows a menu for selecting the page size.<br/>Default: False<br/><br/>pageable.previousNext—Toggles the Previous and Next buttons.<br/>Default: True<br/><br/>Default value for pageable: null|
+|9|style|Set style to the grid|style.customizedRow: Customize background color of rows based on given field, field value and operator.<br/>Default: None<br/><br/>style.customizedRow.field, style.customizedRow.value, style.customizedRow.operator, style.customizedRow.style<br/>Create condition for applying custom color to a row. style.customizedRow.style.backgroundColor will be applied to rows where (style.customizedRow.field.value style.customizedRow.operator style.customizedRow.value)<br/>Default: None for all.|
+|11|aggregates|Set values for agrregates|By default aggregate cell will have red background unless specified in style.|
+|12|showColumns|Provide column details to be shown in the grid|Array of column details.<br/><br/>field:"fieldName"<br/>title:"titleName"<br/>filter:"numeric" / "boolean"<br/>width:"100"<br/>locked: true / false<br/>parentName:"parentname"<br/>isParent:true / false|
+|13|dataState||dataState.skip:0<br/><br/>dataState.take:2<br/><br/>dataState.sort:Array of column field names to sort data. Format:[{""field"": ""fieldName""}]<br/>Default: []<br/><br/>dataState.group: Array of column field names to group data. Format:[{""field"": ""fieldName""}]<br/>Default: []<br/>|
+|14|dataOperations||For example:<br/>dataOperations.primaryKey:"columnName"<br/><br/>dataOperations.addUrl: "http://localhost:8089/add"<br/><br/>dataOperations.updateUrl:"http://localhost:8089/update"<br/><br/>dataOperations.deleteUrl:"http://localhost:8089/delete"|
+|15|selectedRowPrimaryKey|Set value to select rows|For example:<br/>  selectedRowPrimaryKey:5|
+|16|uniqueUrl|Provide unique url|For example:<br/> https://demos.telerik.com/kendo-ui/service-v4/odata/Products?$count=true&|
+
+
+
+
+
+
