--- a/stories/componentStories/bkeySearcherstories/bkeyEvents.mdx
+++ b/stories/componentStories/bkeySearcherstories/bkeyEvents.mdx
@@ -2,5 +2,5 @@
  
 |Sr. No.|Events|Comments|Examples|
 |--- |--- |--- |--- |
-|1|add||&lt;script&gt;<br/>function onAddItemHandler(){<br/>alert(' onAddItemHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;bkey-searcher onBlur="onAddItemHandler\(\)"&gt;|
-|2|remove||&lt;script&gt;<br/>function onRemoveItemHandler(){<br/>alert(' onRemoveItemHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;bkey-searcher onFocus="onRemoveItemHandler\(\)"&gt;|
+|1|addItem||&lt;script&gt;<br/>function onAddItemHandler(){<br/>alert(' onAddItemHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;bkey-searcher onAddItem="onAddItemHandler\(\)"&gt;|
+|2|removeItem||&lt;script&gt;<br/>function onRemoveItemHandler(){<br/>alert(' onRemoveItemHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;bkey-searcher onRemoveItem="onRemoveItemHandler\(\)"&gt;|
