--- a/stories/componentStories/bkeySearcherstories/bkeyMethods.mdx
+++ b/stories/componentStories/bkeySearcherstories/bkeyMethods.mdx
@@ -4,6 +4,6 @@
 |--- |--- |--- |--- |
 |1|getSelectedValues|Get all the selected values|var element = document.getElementById("idOfElement");<br/>alert(element.getSelectedValues());|
 |2|refresh|Get the bkey searcher back to its initial form|var element = document.getElementById("idOfElement");<br/>element.refresh()|
-|3|resetData|Set dates in date hierarchy|var element = document.getElementById("idOfElement");<br/>element.resetData()|
+|3|resetData|Resets data|var element = document.getElementById("idOfElement");<br/>element.resetData()|
 
 
