--- a/stories/componentStories/bkeySearcherstories/bkeyParams.mdx
+++ b/stories/componentStories/bkeySearcherstories/bkeyParams.mdx
@@ -1,9 +1,9 @@
 |Sr. No.   |  Name | Purpose   | Possible Values  |Mandatory|
 |---|---|---|---|---|
 | 1  |dataUrl | Provide Url to load data|For example:<br/> "https://demos.telerik.com/kendo-ui/service-v4/odata/Products?$count=true&",|Yes|
-| 2 |dataState|Set values to sort or group columns |dataState.skip<br/><br/>dataState.take<br/><br/>dataState.sort:[]<br/><br/>dataState.group:[] |
+| 2 |dataState|Set values to sort or group columns |dataState.skip<br/><br/>dataState.take<br/><br/>dataState.sort:[]<br/><br/>dataState.group:[] |No|
 | 3 |otherGridOptions | |otherGridOptions.sortable:<br/><br/>otherGridOptions.loadOnce |No|
 | 4 |pageable | Set values for pagination|pageable.buttonCount => set number of buttons to be displayed for pagination.<br/> For Example:<br/>"pageable":{"buttonCount":3} |No|
 | 5 |primaryKey| Set primary key for a column|For Example:<br/> "primaryKey":"ProductID" |Yes|
-| 6 |style| Set style to bkey searcher| |
+| 6 |style| Set style to bkey searcher| |No|
 | 7 |showcolumns|Display column names |"showColumns": [<br/>{<br/> "field": "ProductID",<br/>"title": "ProductID",<br/>"filter": "numeric"<br/> },<br/>{<br/>"field": "ProductName",<br/>"title": "Product Name",<br/> "filter": "text"<br/>}<br/>] |Yes|
