--- a/stories/componentStories/gridStories/cellLevelTool.stories.mdx
+++ b/stories/componentStories/gridStories/cellLevelTool.stories.mdx
@@ -1,14 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/cellLevel.png';
+import cellLevelTool from '../../assets/cellLevel.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Cell Level Tooltip" component={grid} />
 
  data-options = '&#123; "otherGridOptions": &#123;"cellToolTip": true&#125; &#125';
 
-<img src={imgUrl} className="grid-img"/>
+<img src={cellLevelTool} className="grid-img"/>
 
 
