--- a/stories/componentStories/gridStories/exportOptions.stories.mdx
+++ b/stories/componentStories/gridStories/exportOptions.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/exportOptions.png';
+import exportOptions from '../../assets/exportOptions.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Export Options" component={grid} />
 
  data-options = '&#123; "exportOptions": &#123; "toExcel": true, "toPDF": true, "allPages": true &#125; &#125;'
-<img src={imgUrl} className="grid-img"/>
+<img src={exportOptions} className="grid-img"/>
 
 
