--- a/stories/componentStories/gridStories/filterMenu.stories.mdx
+++ b/stories/componentStories/gridStories/filterMenu.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/filterMenu.png';
+import filterMenu from '../../assets/filterMenu.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Filter Option/Filter as menu option" component={grid} />
 
  data-options = '{"filterOptions": {"filterable": true, "filterMode": "menu"}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={filterMenu} className="grid-img"/>
 
 
