--- a/stories/componentStories/gridStories/inCell.stories.mdx
+++ b/stories/componentStories/gridStories/inCell.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/inCell.png';
+import inCell from '../../assets/inCell.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Edit Options/In cell editing of all cells" component={grid} />
 
 data-options = '{"otherGridOptions":{"allEditable": true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={inCell} className="grid-img"/>
 
 
