--- a/stories/componentStories/gridStories/multiColHeaders.stories.mdx
+++ b/stories/componentStories/gridStories/multiColHeaders.stories.mdx
@@ -1,9 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/multiColumn.png';
+import multiColumn from '../../assets/multiColumn.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Column Level Configuration/Multi column headers" component={grid} />
 
@@ -51,4 +49,4 @@ import '../../style.css';
         "filter": "numeric",
         "parentName": "Header3"
       }]"}'
-<img src={imgUrl} className="grid-img"/>
+<img src={multiColumn} className="grid-img"/>
