--- a/stories/componentStories/gridStories/reorderRow.stories.mdx
+++ b/stories/componentStories/gridStories/reorderRow.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/reorderRow.png';
+import reorderRow from '../../assets/reorderRow.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Row Level Configurations/Reorder Row" component={grid} />
 
  data-options = '{"reorderRows":true}'
-<img src={imgUrl} className="grid-img"/>
+<img src={reorderRow} className="grid-img"/>
 
 
