--- a/stories/componentStories/gridStories/stickyHeader.stories.mdx
+++ b/stories/componentStories/gridStories/stickyHeader.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/stickyHeader.png';
+import stickyHeader from '../../assets/stickyHeader.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Sticky Header" component={grid} />
 
  No data-options. Default behaviour.
-<img src={imgUrl} className="grid-img"/>
+<img src={stickyHeader} className="grid-img"/>
 
 
