--- a/stories/componentStories/gridStories/stripedPattern.stories.mdx
+++ b/stories/componentStories/gridStories/stripedPattern.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/stripedPattern.png';
+import stripedPattern from '../../assets/stripedPattern.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Striped Pattern" component={grid} />
 
 data-options = '&#123; "style": &#123; "stripedPattern":true &#125; &#125;' By Default it will be set to true
-<img src={imgUrl} className="grid-img"/>
+<img src={stripedPattern} className="grid-img"/>
 
 
