--- a/stories/componentStories/gridStories/aggregateRow.stories.mdx
+++ b/stories/componentStories/gridStories/aggregateRow.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/aggregaterow.png';
+import aggregarteRow from '../../assets/aggregaterow.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Aggregate Row" component={grid} />
 
  data-options =  '{"aggregates": [{"field": "AmortizedCost"},{"field": "Allowance"},{"field": "Adjustment"}]}'
-<img src={imgUrl} className="grid-img"/>
+<img src={aggregarteRow} className="grid-img"/>
 
 
