--- a/stories/componentStories/gridStories/clearFilter.stories.mdx
+++ b/stories/componentStories/gridStories/clearFilter.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/clearFilter.png';
+import clearFilter from '../../assets/clearFilter.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Filter Option/Clear filter" component={grid} />
 
  No data options
-<img src={imgUrl} className="grid-img"/>
+<img src={clearFilter} className="grid-img"/>
 
 
