--- a/stories/componentStories/gridStories/editCell.stories.mdx
+++ b/stories/componentStories/gridStories/editCell.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/editCell.png';
+import editCell from '../../assets/editCell.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Edit Options/Edit in cell" component={grid} />
 
  data-options = '{"otherGridOptions": {"rowInEditMode": true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={editCell} className="grid-img"/>
 
 
