--- a/stories/componentStories/gridStories/extForm.stories.mdx
+++ b/stories/componentStories/gridStories/extForm.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/externalForm.png';
+import externalForm from '../../assets/externalForm.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Edit Options/External Form" component={grid} />
 
  data-options = '{"otherGridOptions":{"externalEditMode": true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={externalForm} className="grid-img"/>
 
 
