--- a/stories/componentStories/gridStories/filterMultiple.stories.mdx
+++ b/stories/componentStories/gridStories/filterMultiple.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/filterMultiple.png';
+import filterMultiple from '../../assets/filterMultiple.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Filter Option/Filter options with multiple values" component={grid} />
 
  data-options = '{"filterOptions": {"filterable": false, "filterMode": "menu", isMultiValueFilter: true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={filterMultiple} className="grid-img"/>
 
 
