--- a/stories/componentStories/gridStories/filterSingle.stories.mdx
+++ b/stories/componentStories/gridStories/filterSingle.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/filterSingle.png';
+import filterSingle from '../../assets/filterSingle.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Filter Option/Filter options with single value" component={grid} />
 
  data-options = '{"filterOptions": {"filterable": true, "filterMode": "menu", isMultiValueFilter: false}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={filterSingle} className="grid-img"/>
 
 
