--- a/stories/componentStories/gridStories/frontBack.stories.mdx
+++ b/stories/componentStories/gridStories/frontBack.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/frontBackPagination.png';
+import frontBackPagination from '../../assets/frontBackPagination.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Front or Back end pagination" component={grid} />
 
   data-options = '&#123; "loadOnce": true &#125; for backend pagination'
-<img src={imgUrl} className="grid-img"/>
+<img src={frontBackPagination} className="grid-img"/>
 
 
