--- a/stories/componentStories/gridStories/infiniteScroll.stories.mdx
+++ b/stories/componentStories/gridStories/infiniteScroll.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/infiniteScroll.png';
+import infinteScroll from '../../assets/infiniteScroll.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Infinite Scroll Mode" component={grid} />
 
  No data-options required. If no value specified for any of pageable fields, grid will render with infinite scroll
-<img src={imgUrl} className="grid-img"/>
+<img src={infinteScroll} className="grid-img"/>
 
 
