--- a/stories/componentStories/gridStories/lockedColumns.stories.mdx
+++ b/stories/componentStories/gridStories/lockedColumns.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/lockedColumns.png';
+import lockedColumns from '../../assets/lockedColumns.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Column Level Configuration/Locked Columns" component={grid} />
 
 data-options = '{"lockedColumns": ["Header6"]}'
-<img src={imgUrl} className="grid-img"/>
+<img src={lockedColumns} className="grid-img"/>
 
 
