--- a/stories/componentStories/gridStories/nestedGrid.stories.mdx
+++ b/stories/componentStories/gridStories/nestedGrid.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/nestedPagination.png';
+import nestedGrid from '../../assets/nestedPagination.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Nested Grid With Pagination" component={grid} />
 
  data-options = '&#123;  "advanced": &#123;"masterDetail":"columnName"&#125; &#125;'
-<img src={imgUrl} className="grid-img"/>
+<img src={nestedGrid} className="grid-img"/>
 
 
