--- a/stories/componentStories/gridStories/pagination.stories.mdx
+++ b/stories/componentStories/gridStories/pagination.stories.mdx
@@ -1,12 +1,10 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/pagination.png';
+import pagination from '../../assets/pagination.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Pagination" component={grid} />
 
  data-options = '&#123; "pageable":{"buttonCount": 5, "type": "numeric", "info": true, "pageSizes":true, "previousNext": true} &#125;'
-<img src={imgUrl} className="grid-img"/>
+<img src={pagination} className="grid-img"/>
 
