--- a/stories/componentStories/gridStories/reorderCols.stories.mdx
+++ b/stories/componentStories/gridStories/reorderCols.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/reorderColumns.png';
+import reorderColumns from '../../assets/reorderColumns.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Column Level Configuration/Reorder Columns" component={grid} />
 
 data-options = '{"otherGridOptions": {"reorderable": true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={reorderColumns} className="grid-img"/>
 
 
