--- a/stories/componentStories/gridStories/resizableColumns.stories.mdx
+++ b/stories/componentStories/gridStories/resizableColumns.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/resizableColumns.png';
+import resizableColumns from '../../assets/resizableColumns.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Column Level Configuration/Resizable Columns" component={grid} />
 
 data-options = '{"otherGridOptions": {"resizable": true}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={resizableColumns} className="grid-img"/>
 
 
