--- a/stories/componentStories/gridStories/rowDetail.stories.mdx
+++ b/stories/componentStories/gridStories/rowDetail.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/rowDetailing.png';
+import rowDetailing from '../../assets/rowDetailing.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Row Level Configurations/Row Detailing on expanding" component={grid} />
 
  data-options = '&#123;  "advanced": &#123;"detailRows":&#123;"type": "column","columns":[&#123;"label":"Status","field":"Status"&#125;,&#123;"label":"Occurance","field":"Occurance"&#125;&#123;"label":"Comments","field":"Comments"&#125;]&#125; &#125; &#125;'
-<img src={imgUrl} className="grid-img"/>
+<img src={rowDetailing} className="grid-img"/>
 
 
