--- a/stories/componentStories/gridStories/rowStyling.stories.mdx
+++ b/stories/componentStories/gridStories/rowStyling.stories.mdx
@@ -1,13 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/rowStyling.png';
+import rowstyling from '../../assets/rowStyling.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Row Level Configurations/Customised Row Styling" component={grid} />
 
  data-options = '{"style": {"customizedRow": {"field":"fieldName","value":"22","operator":"<","style": {"backgroundColor": "rgb(55, 180, 0,0.32)"}}}}'
-<img src={imgUrl} className="grid-img"/>
+<img src={rowstyling} className="grid-img"/>
 
 
