--- a/stories/componentStories/gridStories/selectUnselect.stories.mdx
+++ b/stories/componentStories/gridStories/selectUnselect.stories.mdx
@@ -1,13 +1,10 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/selectUnselect.png';
+import selectUnselect from '../../assets/selectUnselect.png';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Select and Unselect" component={grid} />
 
- 
-<img src={imgUrl} className="grid-img"/>
+<img src={selectUnselect} className="grid-img"/>
 
 
