--- a/stories/componentStories/gridStories/sortColumn.stories.mdx
+++ b/stories/componentStories/gridStories/sortColumn.stories.mdx
@@ -1,14 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { grid } from '@storybook/react/demo';
-import imgUrl from '../../assets/sortColumn.PNG';
+import sortColumn from '../../assets/sortColumn.PNG';
 import '../../style.css';
-
-
 
 <Meta title="Grid/Generic Configurations/Sort Column" component={grid} />
 
 data-options = '&#123; "sortable": &#123; "allowed": true,"mode":"single","allowUnsort":false &#125;  &#125;'
-<img src={imgUrl} className="grid-img"/>
+<img src={sortColumn} className="grid-img"/>
 
 
 
