--- a/stories/componentStories/bkeySearcherstories/bkeyMethods.mdx
+++ b/stories/componentStories/bkeySearcherstories/bkeyMethods.mdx
@@ -1,9 +1,51 @@
+<table>
+<thead>
+<tr>
+<th>Sr. No.</th>
+<th>Methods</th>
+<th>Comments</th>
+<th width="523px">Examples</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>getSelectedValues</td>
+<td>Get all the selected values</td>
+<td>
 
- 
-|Sr. No.|Methods|Comments|Examples|
-|--- |--- |--- |--- |
-|1|getSelectedValues|Get all the selected values|var element = document.getElementById("idOfElement");<br/>alert(element.getSelectedValues());|
-|2|refresh|Get the bkey searcher back to its initial form|var element = document.getElementById("idOfElement");<br/>element.refresh()|
-|3|resetData|Resets data|var element = document.getElementById("idOfElement");<br/>element.resetData()|
+```javascript
+var element = document.getElementById("idOfElement");
+alert(element.getSelectedValues());
+```
 
+</td>
+</tr>
+<tr>
+<td>2</td>
+<td>refresh</td>
+<td>Get the bkey searcher back to its initial form</td>
+<td>
 
+```javascript
+var element</var> = document.getElementById("idOfElement");
+element.refresh()
+```
+
+</td>
+</tr>
+<tr>
+<td>3</td>
+<td>resetData</td>
+<td>Resets data</td>
+<td>
+
+```javascript
+var element</var>= document.getElementById("idOfElement");
+element.resetData()
+```
+
+</td>
+</tr>
+</tbody>
+</table>
