--- a/stories/componentStories/datePickerStories/datePickerMethods.mdx
+++ b/stories/componentStories/datePickerStories/datePickerMethods.mdx
@@ -1,11 +1,87 @@
 
- 
-|Sr. No.|Methods|Comments|Examples|
-|--- |--- |--- |--- |
-|1|getValue|Get the selected date|var element = document.getElementById("idOfElement");<br/>alert(element.getValue());|
-|2|getStartDate| Get assigned start date|var element = document.getElementById("idOfElement");<br/>alert(element.getStartDate())|
-|3|getEndDate|Get assigned end date|var element = document.getElementById("idOfElement");<br/>alert(element.getEndDate())|
-|4|refresh|Get the datepicker back to its initial form|var element = document.getElementById("idOfElement");<br/>element.refresh()|
-|5|setValue|Set date in the datepicker|var element = document.getElementById("idOfElement");<br/>element.setValue('12/02/2019')|
-|6|setDataOption|Updates data options|var element = document.getElementById("idOfElement");<br/>element.setDataOption("lowerlimit","01/02/2015")|
 
+<table>
+<tr>
+<th>Sr. No.</th>
+<th>Methods</th>
+<th>Comments</th>
+<th width="500px">Examples</th>
+</tr>
+<tr>
+<td>1</td>
+<td>getValue</td>
+<td>Get the selected date</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+alert(element.getValue());
+```
+
+</td>
+</tr>
+<tr>
+<td>2</td>
+<td>getStartDate</td>
+<td>Get assigned start date</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+alert(element.getStartDate())
+```
+
+</td>
+</tr>
+<tr>
+<td>3</td>
+<td>getEndDate</td>
+<td>Get assigned end date</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+alert(element.getEndDate())
+```
+
+</td>
+</tr>
+<tr>
+<td>4</td>
+<td>refresh</td>
+<td>Get the datepicker back to its initial form</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");element.refresh()
+```
+
+</td>
+</tr>
+<tr>
+<td>5</td>
+<td>setValue</td>
+<td>Set date in the datepicker</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+element.setValue('12/02/2019')
+```
+
+</td>
+</tr>
+<tr>
+<td>6</td>
+<td>setDataOption</td>
+<td>Updates data options</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+element.setDataOption("lowerlimit","01/02/2015")
+```
+
+</td>
+</tr>
+</table>
