--- a/stories/componentStories/gridStories/cellLevelTool.stories.mdx
+++ b/stories/componentStories/gridStories/cellLevelTool.stories.mdx
@@ -5,7 +5,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Cell Level Tooltip" component={grid} />
 
- data-options = '&#123; "otherGridOptions": &#123;"cellToolTip": true&#125; &#125';
+ data-options = '{ "otherGridOptions": {"cellToolTip": true} }';
 
 <img src={cellLevelTool} className="grid-img"/>
 
