--- a/stories/componentStories/gridStories/exportOptions.stories.mdx
+++ b/stories/componentStories/gridStories/exportOptions.stories.mdx
@@ -5,7 +5,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Export Options" component={grid} />
 
- data-options = '&#123; "exportOptions": &#123; "toExcel": true, "toPDF": true, "allPages": true &#125; &#125;'
+ data-options = '{ "exportOptions": { "toExcel": true, "toPDF": true, "allPages": true } }'
 <img src={exportOptions} className="grid-img"/>
 
 
