--- a/stories/componentStories/gridStories/frontBack.stories.mdx
+++ b/stories/componentStories/gridStories/frontBack.stories.mdx
@@ -5,7 +5,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Front or Back end pagination" component={grid} />
 
-  data-options = '&#123; "loadOnce": true &#125; for backend pagination'
+  data-options = '{ "loadOnce": true }; for backend pagination'
 <img src={frontBackPagination} className="grid-img"/>
 
 
