--- a/stories/componentStories/gridStories/groupColumn.stories.mdx
+++ b/stories/componentStories/gridStories/groupColumn.stories.mdx
@@ -7,7 +7,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Group Column" component={grid} />
 
-data-options = '&#123; "otherGridOptions": &#123; "groupable": trues  &#125;,"dataState": &#123;  "group": [&#123;"field":"City"&#125;] &#125;  &#125;'
+data-options = '{ "otherGridOptions": { "groupable": trues  },"dataState": {  "group": [{"field":"City"}] }  }'
 <img src={imgUrl} className="grid-img"/>
 
 
