--- a/stories/componentStories/gridStories/nestedGrid.stories.mdx
+++ b/stories/componentStories/gridStories/nestedGrid.stories.mdx
@@ -5,7 +5,7 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Nested Grid With Pagination" component={grid} />
 
- data-options = '&#123;  "advanced": &#123;"masterDetail":"columnName"&#125; &#125;'
+ data-options = '{  "advanced": {"masterDetail":"columnName"} }'
 <img src={nestedGrid} className="grid-img"/>
 
 
