--- a/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
+++ b/stories/componentStories/dateHierarchyStories/dateHierarchyMethods.mdx
@@ -1,9 +1,51 @@
+<table>
+<thead>
+<tr>
+<th>Sr. No.</th>
+<th>Methods</th>
+<th>Comments</th>
+<th width="470px">Examples</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>getValues</td>
+<td>Get all the selected values</td>
+<td>
 
- 
-|Sr. No.|Methods|Comments|Examples|
-|--- |--- |--- |--- |
-|1|getValues|Get all the selected values|var element = document.getElementById("idOfElement");<br/>alert(element.getValues());|
-|2|refresh|Get the date hierarchy back to its initial form|var element = document.getElementById("idOfElement");<br/>element.refresh()|
-|3|setValues|Set dates in date hierarchy|var element = document.getElementById("idOfElement");<br/>element.setValues(["2/1/2020", "2/5/2020", "11/6/2020"])|
+```javascript
+var element = document.getElementById("idOfElement");
+alert(element.getValues());
+```
 
+</td>
+</tr>
+<tr>
+<td>2</td>
+<td>refresh</td>
+<td>Get the date hierarchy back to its initial form</td>
+<td>
 
+```javascript
+var element = document.getElementById("idOfElement");
+element.refresh();
+```
+
+</td>
+</tr>
+<tr>
+<td>3</td>
+<td>setValues</td>
+<td>Set dates in date hierarchy</td>
+<td>
+
+```javascript
+var element = document.getElementById("idOfElement");
+element.setValues(["2/1/2020", "2/5/2020", "11/6/2020"]);
+```
+
+</td>
+</tr>
+</tbody>
+</table>
