--- a/stories/componentStories/datePickerStories/datePickerEvents.mdx
+++ b/stories/componentStories/datePickerStories/datePickerEvents.mdx
@@ -1,14 +1,153 @@
+<table>
 
- 
-|Sr. No.|Events|Comments|Examples|
-|--- |--- |--- |--- |
-|1|blur| Script to be run when an element loses focus|&lt;script&gt;<br/>function onBlurHandler(){<br/>alert(' onBlurHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onBlur="onBlurHandler\(\)"&gt;|
-|2|focus|Script to be run when an element gets focus|&lt;script&gt;<br/>function onFocusHandler(){<br/>alert(' onFocusHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onFocus="onFocusHandler\(\)"&gt;|
-|3|input|Script to be run when an element gets user input|&lt;script&gt;<br/>function onInputHandler(){<br/>alert(' onInputHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onInput="onInputHandler\(\)"&gt;|
-|4|change|Script to be run when change has occurred to the control|&lt;script&gt;<br/>function onChangeHandler(){<br/>alert(' onChangeHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onChange="onChangeHandler\(\)"&gt;|
-|5|keyup|script to be run when user releases a key|&lt;script&gt;<br/>function onKeyupHandler(){<br/>alert(' onKeyupHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onKeyUp="onKeyupHandler\(\)"&gt;|
-|6|keydown|script to be run when user presses a key|&lt;script&gt;<br/>function onKeydownHandler(){<br/>alert(' onKeydownHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onKeyDown="onKeydownHandler\(\)"&gt;|
-|7|keyleft|script to be run when user releases a key|&lt;script&gt;<br/>function onKeyleftHandler(){<br/>alert(' onKeyleftHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onKeyLeft="onKeyleftHandler\(\)"&gt;|
-|8|keyright|script to be run when user presses a key|&lt;script&gt;<br/>function onKeyrightHandler(){<br/>alert(' onKeyrightHandler called ');<br/>}<br/>&lt;/script&gt;<br/><br/>&lt;date-picker onKeyRight="onKeyrightHandler\(\)"&gt;|
+<tr>
+<th>Sr. No.</th>
+<th>Events</th>
+<th>Comments</th>
+<th width="450px">Examples</th>
+</tr>
 
+<tr>
+<td>1</td>
+<td>blur</td>
+<td>Script to be run when an element loses focus</td>
+<td>
 
+```javascript
+<script>
+function onBlurHandler(){
+    alert(' onBlurHandler called ');
+}
+</script>
+
+<date-picker onBlur="onBlurHandler()"></date-picker>
+
+```
+</td>
+</tr>
+<tr>
+<td>2</td>
+<td>focus</td>
+<td>Script to be run when an element gets focus</td>
+<td>
+
+```javascript
+<script>
+function onFocusHandler(){
+    alert(' onFocusHandler called ');
+}
+</script>
+
+<date-picker onFocus="onFocusHandler()"></date-picker>
+```
+</td>
+</tr>
+<tr>
+<td>3</td>
+<td>input</td>
+<td>Script to be run when an element gets user input</td>
+<td>
+
+```javascript
+<script>
+function onInputHandler(){
+    alert(' onInputHandler called ');
+}
+</script>
+
+<date-picker onInput="onInputHandler()"></date-picker>
+```
+
+</td>
+</tr>
+<tr>
+<td>4</td>
+<td>change</td>
+<td>Script to be run when change has occurred to the control</td>
+<td>
+
+```javascript
+<script>
+function onChangeHandler(){
+    alert(' onChangeHandler called ');
+}
+</script>
+
+<date-picker onChange="onChangeHandler()"></date-picker>
+```
+
+</td>
+</tr>
+<tr>
+<td>5</td>
+<td>keyup</td>
+<td>script to be run when user releases a key</td>
+<td>
+
+```javascript
+<script>
+function onKeyupHandler(){
+    alert(' onKeyupHandler called ');
+}
+</script>
+
+<date-picker onKeyup="onKeyupHandler()"></date-picker>
+```
+
+</td>
+</tr>
+<tr>
+<td>6</td>
+<td>keydown</td>
+<td>script to be run when user presses a key</td>
+<td>
+
+```javascript
+<script>
+function onKeydownHandler(){
+    alert(' onKeydownHandler called ');
+}
+</script>
+
+<date-picker onKeydown="onKeydownHandler()"></date-picker>
+```
+
+</td>
+</tr>
+<tr>
+<td>7</td>
+<td>keyleft</td>
+<td>script to be run when user releases a key</td>
+<td>
+
+```javascript
+<script>
+function onKeyleftHandler(){
+    alert(' onKeyleftHandler called ');
+}
+</script>
+
+<date-picker onKeyleft="onKeyleftHandler()"></date-picker>
+```
+
+</td>
+</tr>
+<tr>
+<td>8</td>
+<td>keyright</td>
+<td>script to be run when user presses a key</td>
+<td>
+
+```javascript
+<script>
+function onKeyrightHandler(){
+    alert(' onKeyrightHandler called ');
+}
+</script>
+
+<date-picker onKeyright="onKeyrightHandler()"></date-picker>
+```
+
+</td>
+</tr>
+</table>
