--- a/stories/componentStories/gridStories/pagination.stories.mdx
+++ b/stories/componentStories/gridStories/pagination.stories.mdx
@@ -5,6 +5,6 @@ import '../../style.css';
 
 <Meta title="Grid/Generic Configurations/Pagination" component={grid} />
 
- data-options = '&#123; "pageable":{"buttonCount": 5, "type": "numeric", "info": true, "pageSizes":true, "previousNext": true} &#125;'
+ data-options = '{ "pageable":{"buttonCount": 5, "type": "numeric", "info": true, "pageSizes":true, "previousNext": true} }'
 <img src={pagination} className="grid-img"/>
 
