--- a/stories/componentStories/formGenerateStories/formParams.stories.mdx
+++ b/stories/componentStories/formGenerateStories/formParams.stories.mdx
@@ -1,9 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import { form } from '@storybook/react/demo';
+import FormParams from './formParams.mdx';
+
 
 
 
 <Meta title="Form Generator/Parameters" component={form}/>
 
+<FormParams />
 
 
